resources/serverless/yamls/serverless/templates/daemonset-certs.yaml
---
# Source: serverless/templates/daemonset-certs.yaml
# minikube allows for insecure registries by default
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: serverless-docker-registry-self-signed-cert
  namespace: default
  labels:
    app: 'serverless'
    app.kubernetes.io/instance: 'RELEASE-NAME'
    app.kubernetes.io/managed-by: 'Helm'
    app.kubernetes.io/name: 'serverless'
    app.kubernetes.io/version: 'f4e7f64c'
    helm.sh/chart: 'serverless-1.0.0'
    version: 'f4e7f64c'
spec:
  selector:
    matchLabels:
      app: serverless-docker-registry-cert-update
  template:
    metadata:
      labels:
        app: serverless-docker-registry-cert-update
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      serviceAccountName: serverless-self-signed-cert
      volumes:
        - name: etckube
          hostPath:
            path: /etc/
        - configMap:
            defaultMode: 420
            name: serverless-docker-registry-cert-patch
          name: scripts
      containers:
        - name: pause
          image: gcr.io/google-containers/pause-amd64:3.2
          resources:
            requests:
              cpu: 20m
              memory: 20Mi
            limits:
              cpu: 30m
              memory: 30Mi
      terminationGracePeriodSeconds: 30
