resources/serverless/yamls/serverless/templates/deployment.yaml
---
# Source: serverless/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: serverless-ctrl-mngr
  namespace: default
  labels:
    app: 'serverless'
    app.kubernetes.io/instance: 'RELEASE-NAME'
    app.kubernetes.io/managed-by: 'Helm'
    app.kubernetes.io/name: 'serverless'
    app.kubernetes.io/version: 'f4e7f64c'
    helm.sh/chart: 'serverless-1.0.0'
    version: 'f4e7f64c'
spec:
  selector:
    matchLabels:
      app: serverless
      app.kubernetes.io/name: serverless
      app.kubernetes.io/instance: "RELEASE-NAME"
  replicas: 1
  template:
    metadata:
      labels:
        app: serverless
        app.kubernetes.io/name: serverless
        app.kubernetes.io/instance: "RELEASE-NAME"
      annotations:
        
        sidecar.istio.io/inject: "false"
        
        prometheus.io/path: /metrics
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
    spec:
      serviceAccountName: serverless-controller-manager
      
      terminationGracePeriodSeconds: 10
      containers:
        - name: manager
          image: "eu.gcr.io/kyma-project/function-controller:f4e7f64c"
          imagePullPolicy: IfNotPresent
          command:
          - /app/manager
          resources:
            limits:
              cpu: 100m
              memory: 126Mi
            requests:
              cpu: 10m
              memory: 32Mi
          ports:
            - containerPort: 8080
              name: http-metrics
              protocol: TCP
